--- a/app/src/main/res/layout/activity_register_cliente.xml
+++ b/app/src/main/res/layout/activity_register_cliente.xml
@@ -14,15 +14,15 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/backImg"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="5dp"
             android:src="@drawable/ic_backimg"/>
         <TextView
             android:id="@+id/txtBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="21sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             android:textColor="@color/material_dynamic_neutral20"
             android:layout_marginTop="10dp"/>
@@ -77,24 +77,31 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"/>
-    <EditText
-        android:id="@+id/txtPassword"
-        android:inputType="textPassword"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/txtPassword"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="10dp"/>
-    <EditText
-        android:id="@+id/txtConfirmPassword"
-        android:inputType="textPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/txtConfirmPassword"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="10dp"/>
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/txtPassword"
+            android:layout_width="195dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:hint="@string/txtPassword"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/txtConfirmPassword"
+            android:layout_width="195dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"
+            android:hint="@string/txtConfirmPassword"
+            android:inputType="textPassword" />
+    </LinearLayout>
     <EditText
         android:id="@+id/txtEmail"
         android:inputType="textEmailAddress"
@@ -121,6 +128,15 @@
         android:text="@string/btnRegistrar"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"/>
+    <TextView
+        android:id="@+id/goLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/goLogin"
+        android:textStyle="italic|bold"
+        android:textSize="18sp"
+        android:gravity="center"/>
 
 </LinearLayout>
