--- a/app/src/main/res/layout/activity_register_empresa.xml
+++ b/app/src/main/res/layout/activity_register_empresa.xml
@@ -14,15 +14,15 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/backImg"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_backimg"/>
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_backimg" />
         <TextView
             android:id="@+id/txtBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="21sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             android:textColor="@color/material_dynamic_neutral20"
             android:layout_marginTop="10dp"/>
@@ -136,7 +136,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/txtCep"
             android:layout_marginStart="5dp"
-            android:layout_marginBottom="10dp"/>
+            />
         <EditText
             android:id="@+id/txtUf"
             android:layout_width="200dp"
@@ -151,5 +151,14 @@
         android:text="@string/btnRegistrar"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="5dp"/>
+    <TextView
+        android:id="@+id/goLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/goLogin"
+        android:textSize="18sp"
+        android:textStyle="italic|bold"
+        android:gravity="center"
+        />
 </LinearLayout>
