--- a/app/src/main/res/navigation/navigation_cliente.xml
+++ b/app/src/main/res/navigation/navigation_cliente.xml
@@ -4,25 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_cliente"
     app:startDestination="@id/cliente_home">
-
-    <activity
-        android:id="@+id/cliente_chat"
-        android:name="com.example.movingonteste.telasCliente.cliente_chat"
-        android:label="activity_cliente_chat"
-        tools:layout="@layout/activity_cliente_chat" />
-    <activity
-        android:id="@+id/cliente_mapa"
-        android:name="com.example.movingonteste.telasCliente.cliente_mapa"
-        android:label="activity_cliente_mapa"
-        tools:layout="@layout/activity_cliente_mapa" />
-    <activity
+    <fragment
         android:id="@+id/cliente_home"
         android:name="com.example.movingonteste.telasCliente.cliente_home"
-        android:label="activity_cliente_home"
-        tools:layout="@layout/activity_cliente_home" />
-    <activity
+        android:label="Home"
+        tools:layout="@layout/fragment_cliente_home" />
+    <fragment
+        android:id="@+id/cliente_chat"
+        android:name="com.example.movingonteste.telasCliente.cliente_chat"
+        android:label="Chat"
+        tools:layout="@layout/fragment_cliente_chat" />
+    <fragment
         android:id="@+id/cliente_cronograma"
         android:name="com.example.movingonteste.telasCliente.cliente_cronograma"
-        android:label="activity_cliente_cronograma"
-        tools:layout="@layout/activity_cliente_cronograma" />
+        android:label="Cronograma"
+        tools:layout="@layout/fragment_cliente_cronograma" />
+    <fragment
+        android:id="@+id/cliente_mapa"
+        android:name="com.example.movingonteste.telasCliente.cliente_mapa"
+        android:label="Mapa"
+        tools:layout="@layout/fragment_cliente_mapa" />
+    <fragment
+        android:id="@+id/cliente_calculadora"
+        android:name="com.example.movingonteste.telasCliente.cliente_calculadora"
+        android:label="Calculadora de IAC"
+        tools:layout="@layout/fragment_cliente_calculadora" />
 </navigation>
