--- a/app/src/main/res/layout/activity_interfacecliente.xml
+++ b/app/src/main/res/layout/activity_interfacecliente.xml
@@ -6,13 +6,12 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/drawerCliente"
-    tools:context=".telasCliente.InterfaceCliente"
-    tools:openDrawer="start">
+    tools:context=".telasCliente.InterfaceCliente">
 
 
 
         <include
-            android:id="@+id/toolbar"
+            android:id="@+id/telaToolbar"
             layout="@layout/toolbar"
             android:layout_height="match_parent"
             android:layout_width="match_parent"/>
