--- a/app/src/main/res/layout/activity_interfaceempresa.xml
+++ b/app/src/main/res/layout/activity_interfaceempresa.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".telasCliente.cliente_mapa">
+    tools:context=".telasEmpresa.InterfaceEmpresa">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
