--- a/app/src/main/res/layout/conteudo_telas.xml
+++ b/app/src/main/res/layout/conteudo_telas.xml
@@ -8,8 +8,8 @@
     tools:showIn="@layout/toolbar">
 
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
+    <fragment
+        android:id="@+id/conteudoTelas"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
