--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="176dp"
+    android:gravity="bottom"
+    android:orientation="vertical"
     android:background="#3F88C3">
     
     <ImageView
@@ -37,4 +40,4 @@
         android:layout_marginTop="5dp"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
