--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".telasCliente.InterfaceCliente"
-    >
+    tools:context=".telasCliente.InterfaceCliente">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -21,8 +20,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
-    layout="@layout/content"
-        />
+    layout="@layout/conteudo_telas"/>
 
 
 
