--- a/app/src/main/res/navigation/navigation_cliente.xml
+++ b/app/src/main/res/navigation/navigation_cliente.xml
@@ -29,4 +29,9 @@
         android:name="com.example.movingonteste.telasCliente.cliente_calculadora"
         android:label="Calculadora de IAC"
         tools:layout="@layout/fragment_cliente_calculadora" />
+    <fragment
+        android:id="@+id/cliente_perfil"
+        android:name="com.example.movingonteste.telasCliente.cliente_perfil"
+        android:label="Perfil"
+        tools:layout="@layout/fragment_cliente_perfil" />
 </navigation>
